--- a/prizes.html
+++ b/prizes.html
@@ -120,8 +120,90 @@
 						<img class="prizeHeaderImg" src="images\prizes\prize3.jpg" alt="All prizes"/>
 					</div>
 					<br />
-					<div class="center">
-						<h3 class="headers"> Eskimo Quickflip 1 | Eskimo Quickflip 2 | Eskimo Fatfish 949 | Eskimo Mako M43 | Eskimo H.C.40 | Ion 8-Inch Auger | Bigfoot XL Treestand | River's Edge Oasis Treestand | Cash Prizes and more!</h2>
+					<div class="left">
+						<h2 class="headers">Fish Prize List 2016</h2>
+				<ul>
+					<li> *$1000 Cash </li>
+					<li> Eskimo Ice Augor </li>
+					<li> Ice Armor XL Parka </li>
+					<li> Eskimo QuickFlip 1 </li>
+					<li> Fatfish 949 Ice Shack </li>
+					<li> Rivers Edge Oasis 1-Man Ladder Stand </li>
+					<li> Moutrie M-990I Game Camera </li>
+					<li> Deep Freeze BlueTipz Tip Up Alarm System </li>
+					<li> Eskimo Ice Auger </li>
+					<li> Vexilar FL-18 Genz Pack Fish Sonar </li> <!-- 10 -->
+					<li> Rivers Edge Big Foot XL Stand </li>
+					<li> St. Croix Premeier Ice Combo </li>
+					<li> Eskimo QuickFlip 2 </li>
+					<li> Mr.Heater Propane buddy </li>
+					<li> Eskimo Ice Auger </li>
+					<li> Pro Classic Ice Fishing Combo </li>
+					<li> Wildgame Innovations Handheld Card Viewer Trail </li>
+					<li> Fatfish 949 Ice Shack </li>
+					<li> Pflueger Trion Spinning Reel </li>
+					<li> ION Ice Auger </li> <!-- 20 -->
+					<li> Eskimo Hand Auger </li>
+					<li> Rapala Electric Fillet Knife </li>
+					<li> Rivers Edge Oasis 1-Man Ladder Stand </li>
+					<li> Eskimo Ice Auger </li>
+					<li> *$500 Cash </li> <!-- 25 -- >
+					<li> Tip Down </li>
+					<li> Uncle Josh Original Beaver Dam Tip-Up </li>
+					<li> Pro Classic Ice Fishing Combo </li>
+					<li> Fatfish 949 Ice Shack </li>
+					<li> Eskimo Ice Auger </li> <!-- 50 -->
+					<li> Rivers Edge Big Foot XL Stand </li>
+					<li> Scheels Outfitters Rectangular Ice Combo Bag </li>
+					<li> Pflueger Trion Spinning Reel </li>
+					<li> ION Ice Auger </li>  <!--70 -->
+					<li> Frabill Straight Line 101 Ice Reel </li>
+					<li> Pro Classic Ice Fishing Combo </li>
+					<li> Eskimo QuickFlip 1 </li>
+					<li> Uncle Hosh Original Beaver Dam Tip-Up </li>
+					<li> Scheels Outfitters Rectangular Ice Combo Bag </li>
+					<li> Eskimo Ice Auger </li>
+					<li> Scheels Ice Combo Hard Case </li>
+					<li> GPS New Generation ETREX 10 </li>
+					<li> Rapala Electric Fillet Knife </li>
+					<li> Rivers Edge Oasis 1-Man Ladder Stand </li>
+					<li> Ice Castle </li>
+					<li> St. Croix Premier Ice Combo </li>
+					<li> Frabill Straight line 10 Ice Reel </li>
+					<li> Marcum Underwater Camera </li>
+					<li> Tip Down </li>
+					<li> *$500 Cash </li>
+					<li> Scheels Outfitters Rectangular Ice Combo Bag </li>
+					<li> Rivers Edge Big Foot XL Stand </li>
+					<li> Uncle Josh Original Beaver Dam Tip-Up </li>
+					<li> Fatfish 949 Ice Shack </li>
+					<li> Eskimo Ice Auger </li>
+					<li> Eskimo QuickFlip 1 </li>
+					<li> Moultrie M-990I Game Camera </li>
+					<li> Pro Classic Ice Fishing Combo </li>
+					<li> ION Ice Auger </li>
+					<li> Fatfish 949 Ice Shack </li>
+					<li> Eskimo Ice Auger </li>
+					<li> Scheels Ice Combo Hard Case </li>
+					<li> Rivers Edge Big Foot XL Stand </li>
+					<li> Pflueger Trion Spinning Reel </li>
+					<li> Eskimo Quickflip 2 </li>
+					<li> Scheels Outfitters Rectangular Ice Combo Bag </li>
+					<li> Eskimo Ice Auger </li>
+					<li> Rivers Edge Oasis 1-Man Ladder Stand </li>
+					<li> Frabill Straight Line 101 Ice Reel </li>
+					<li> Fatfish 949 Ice Shack </li>
+					<li> Eskimo Ice Auger </li>
+					<li> Pro Classic Ice Fishing Combo </li>
+					<li> Rivers Edge Oasis 1-Man Ladder Stand </li>
+					<li> Eskimo Ice Auger </li>
+					<li> Eskimo QuickFlip 1 </li>
+					<li> Eskimo Hand Auger </li>
+					<li> Deep Freeze BlueTipz Tip Up Alarm System </li>
+					<li> Mr.Heater Propane buddy </li>
+					<li> Uncle Josh Original Beaver Dam Tip-Up </li>
+					<li> *500 Cash </li>
+				</ul>
 						<br /> <!-- BREAK -->
 						<br /> <!-- BREAK -->
 						<br /> <!-- BREAK -->
