Fixed Prizes List, Made Image Slider, Add Rules to Dropdown,

--- a/prizes.html
+++ b/prizes.html
@@ -75,6 +75,8 @@
 							<li><a href="sponsors.html">Sponsors</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="pastResults.html">Past Results</a></li>
+							<li role="presentation" class="divider"></li>
+							<li><a href="assets/rules.pdf" target="_blank">Rules</a></li>
 						</ul>
 					</li>
 					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
@@ -113,97 +115,380 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<h2 class="headers">Check Back Later for an Updated List of Prizes</h2>
-					<div class="center">
-						<img class="prizeHeaderImg" src="images\prizes\prize1.jpg" alt="All prizes"/>
-						<img class="prizeHeaderImg" src="images\prizes\prize2.jpg" alt="All prizes"/>
-						<img class="prizeHeaderImg" src="images\prizes\prize3.jpg" alt="All prizes"/>
+					<h2 class="headers">Prizes</h2>
+						<div class="bs-example1">
+					    <div id="myCarousel" class="carousel slide" data-ride="carousel1">
+					      <!-- Carousel indicators -->
+					      <ol class="carousel-indicators">
+					        	<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					          <li data-target="#myCarousel" data-slide-to="1"></li>
+					          <li data-target="#myCarousel" data-slide-to="2"></li>
+					      </ol>
+					      <!-- Wrapper for carousel items -->
+					      <div class="carousel-inner">
+					          <div class="item active">
+					              <img src="images/prizes/prize1.jpg" alt="First Slide">
+					          </div>
+					          <div class="item">
+					              <img src="images/prizes/prize2.jpg" alt="Second Slide">
+					          </div>
+					          <div class="item">
+					              <img src="images/prizes/prize3.jpg" alt="Third Slide">
+					          </div>
+					      </div>
+					      <!-- Carousel controls -->
+					      <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+					          <span class="glyphicon glyphicon-chevron-left"></span>
+					      </a>
+					      <a class="carousel-control right" href="#myCarousel" data-slide="next">
+					          <span class="glyphicon glyphicon-chevron-right"></span>
+					      </a>
+					    </div>
+						</div>
 					</div>
-					<br />
-					<div class="left">
-						<h2 class="headers">Fish Prize List 2016</h2>
-				<ul>
-					<li> *$1000 Cash </li>
-					<li> Eskimo Ice Augor </li>
-					<li> Ice Armor XL Parka </li>
-					<li> Eskimo QuickFlip 1 </li>
-					<li> Fatfish 949 Ice Shack </li>
-					<li> Rivers Edge Oasis 1-Man Ladder Stand </li>
-					<li> Moutrie M-990I Game Camera </li>
-					<li> Deep Freeze BlueTipz Tip Up Alarm System </li>
-					<li> Eskimo Ice Auger </li>
-					<li> Vexilar FL-18 Genz Pack Fish Sonar </li> <!-- 10 -->
-					<li> Rivers Edge Big Foot XL Stand </li>
-					<li> St. Croix Premeier Ice Combo </li>
-					<li> Eskimo QuickFlip 2 </li>
-					<li> Mr.Heater Propane buddy </li>
-					<li> Eskimo Ice Auger </li>
-					<li> Pro Classic Ice Fishing Combo </li>
-					<li> Wildgame Innovations Handheld Card Viewer Trail </li>
-					<li> Fatfish 949 Ice Shack </li>
-					<li> Pflueger Trion Spinning Reel </li>
-					<li> ION Ice Auger </li> <!-- 20 -->
-					<li> Eskimo Hand Auger </li>
-					<li> Rapala Electric Fillet Knife </li>
-					<li> Rivers Edge Oasis 1-Man Ladder Stand </li>
-					<li> Eskimo Ice Auger </li>
-					<li> *$500 Cash </li> <!-- 25 -- >
-					<li> Tip Down </li>
-					<li> Uncle Josh Original Beaver Dam Tip-Up </li>
-					<li> Pro Classic Ice Fishing Combo </li>
-					<li> Fatfish 949 Ice Shack </li>
-					<li> Eskimo Ice Auger </li> <!-- 50 -->
-					<li> Rivers Edge Big Foot XL Stand </li>
-					<li> Scheels Outfitters Rectangular Ice Combo Bag </li>
-					<li> Pflueger Trion Spinning Reel </li>
-					<li> ION Ice Auger </li>  <!--70 -->
-					<li> Frabill Straight Line 101 Ice Reel </li>
-					<li> Pro Classic Ice Fishing Combo </li>
-					<li> Eskimo QuickFlip 1 </li>
-					<li> Uncle Hosh Original Beaver Dam Tip-Up </li>
-					<li> Scheels Outfitters Rectangular Ice Combo Bag </li>
-					<li> Eskimo Ice Auger </li>
-					<li> Scheels Ice Combo Hard Case </li>
-					<li> GPS New Generation ETREX 10 </li>
-					<li> Rapala Electric Fillet Knife </li>
-					<li> Rivers Edge Oasis 1-Man Ladder Stand </li>
-					<li> Ice Castle </li>
-					<li> St. Croix Premier Ice Combo </li>
-					<li> Frabill Straight line 10 Ice Reel </li>
-					<li> Marcum Underwater Camera </li>
-					<li> Tip Down </li>
-					<li> *$500 Cash </li>
-					<li> Scheels Outfitters Rectangular Ice Combo Bag </li>
-					<li> Rivers Edge Big Foot XL Stand </li>
-					<li> Uncle Josh Original Beaver Dam Tip-Up </li>
-					<li> Fatfish 949 Ice Shack </li>
-					<li> Eskimo Ice Auger </li>
-					<li> Eskimo QuickFlip 1 </li>
-					<li> Moultrie M-990I Game Camera </li>
-					<li> Pro Classic Ice Fishing Combo </li>
-					<li> ION Ice Auger </li>
-					<li> Fatfish 949 Ice Shack </li>
-					<li> Eskimo Ice Auger </li>
-					<li> Scheels Ice Combo Hard Case </li>
-					<li> Rivers Edge Big Foot XL Stand </li>
-					<li> Pflueger Trion Spinning Reel </li>
-					<li> Eskimo Quickflip 2 </li>
-					<li> Scheels Outfitters Rectangular Ice Combo Bag </li>
-					<li> Eskimo Ice Auger </li>
-					<li> Rivers Edge Oasis 1-Man Ladder Stand </li>
-					<li> Frabill Straight Line 101 Ice Reel </li>
-					<li> Fatfish 949 Ice Shack </li>
-					<li> Eskimo Ice Auger </li>
-					<li> Pro Classic Ice Fishing Combo </li>
-					<li> Rivers Edge Oasis 1-Man Ladder Stand </li>
-					<li> Eskimo Ice Auger </li>
-					<li> Eskimo QuickFlip 1 </li>
-					<li> Eskimo Hand Auger </li>
-					<li> Deep Freeze BlueTipz Tip Up Alarm System </li>
-					<li> Mr.Heater Propane buddy </li>
-					<li> Uncle Josh Original Beaver Dam Tip-Up </li>
-					<li> *500 Cash </li>
-				</ul>
+				</div>
+			</div>
+	</section>
+	<section id="prizeGrid"> <!-- Images must be 400x300 -->
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+						<div class="table-responsive">
+							<table class="table">
+							   <thead>
+							      <th><h3>Fish Prize List 2016</h3></th>
+							      <td></td>
+							   </tr>
+							 </thead>
+							 <tbody>
+							      <th>Place</th>
+							      <th>Prize</th>
+							   </tr>
+							   <tr>
+							      <td>1</td>
+							      <td>*$1,000 Cash</td>
+							   </tr>
+							   <tr>
+							      <td>2</td>
+							      <td>Eskimo Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>3</td>
+							      <td>Ice Armor XL Parka</td>
+							   </tr>
+							   <tr>
+							      <td>4</td>
+							      <td>Eskimo QuickFip 1</td>
+							   </tr>
+							   <tr>
+							      <td>5</td>
+							      <td>Fatfish 949 Ice Shack</td>
+							   </tr>
+							   <tr>
+							      <td>6</td>
+							      <td>Rivers Edge Oasis 1-Man Ladder Stand</td>
+							   </tr>
+							   <tr>
+							      <td>7</td>
+							      <td>Moultrie M-990I Game Camera</td>
+							   </tr>
+							   <tr>
+							      <td>8</td>
+							      <td>Deep Freeze BlueTipz Tip Up Alarm System</td>
+							   </tr>
+							   <tr>
+							      <td>9</td>
+							      <td>Eskimo Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>10</td>
+							      <td>Vexilar FL-18 Genz Pack Fish Sonar</td>
+							   </tr>
+							   <tr>
+							      <td>11</td>
+							      <td>Rivers Edge Big Foot XL Stand</td>
+							   </tr>
+							   <tr>
+							      <td>12</td>
+							      <td>St. Croix Premier Ice Combo</td>
+							   </tr>
+							   <tr>
+							      <td>13</td>
+							      <td>Eskimo QuickFlip 2</td>
+							   </tr>
+							   <tr>
+							      <td>14</td>
+							      <td>Mr. Heater  Propane buddy</td>
+							   </tr>
+							   <tr>
+							      <td>15</td>
+							      <td>Eskimo Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>16</td>
+							      <td>Pro Classic Ice Fishing Combo</td>
+							   </tr>
+							   <tr>
+							      <td>17</td>
+							      <td>Wildgame Innovations Handheld Card Viewer Trail</td>
+							   </tr>
+							   <tr>
+							      <td>18</td>
+							      <td>Fatfish 949 Ice Shack</td>
+							   </tr>
+							   <tr>
+							      <td>19</td>
+							      <td>Pflueger Trion Spinning Reel</td>
+							   </tr>
+							   <tr>
+							      <td>20</td>
+							      <td>ION Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>21</td>
+							      <td>Eskimo Hand Auger</td>
+							   </tr>
+							   <tr>
+							      <td>22</td>
+							      <td>Rapala Electric Fillet Knife</td>
+							   </tr>
+							   <tr>
+							      <td>23</td>
+							      <td>Rivers Edge Oasis 1-Man Ladder Stand</td>
+							   </tr>
+							   <tr>
+							      <td>24</td>
+							      <td>Eskimo Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>25</td>
+							      <td>*$500 Cash</td>
+							   </tr>
+							   <tr>
+							      <td>30</td>
+							      <td>Tip Down</td>
+							   </tr>
+							   <tr>
+							      <td>35</td>
+							      <td>Uncle Josh Original Beaver Dam Tip-Up</td>
+							   </tr>
+							   <tr>
+							      <td>40</td>
+							      <td>Pro Classic Ice Fishing Combo</td>
+							   </tr>
+							   <tr>
+							      <td>45</td>
+							      <td>Fatfish 949 Ice Shack</td>
+							   </tr>
+							   <tr>
+							      <td>50</td>
+							      <td>Eskimo Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>55</td>
+							      <td>Rivers Edge Big Foot XL Stand</td>
+							   </tr>
+							   <tr>
+							      <td>60</td>
+							      <td>Scheels Outfitters Rectangular Ice Combo Bag</td>
+							   </tr>
+							   <tr>
+							      <td>65</td>
+							      <td>Pflueger Trion Spinning Reel</td>
+							   </tr>
+							   <tr>
+							      <td>70</td>
+							      <td>ION Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>75</td>
+							      <td>Frabill Straight Line 101 Ice Reel</td>
+							   </tr>
+							   <tr>
+							      <td>80</td>
+							      <td>Pro Classic Ice Fishing Combo</td>
+							   </tr>
+							   <tr>
+							      <td>85</td>
+							      <td>Eskimo QuickFip 1</td>
+							   </tr>
+							   <tr>
+							      <td>90</td>
+							      <td>Uncle Josh Original Beaver Dam Tip-Up</td>
+							   </tr>
+							   <tr>
+							      <td>95</td>
+							      <td>Scheels Outfitters Rectangular Ice Combo Bag</td>
+							   </tr>
+							   <tr>
+							      <td>100</td>
+							      <td>Eskimo Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>105</td>
+							      <td>Scheels Ice Combo Hard Case</td>
+							   </tr>
+							   <tr>
+							      <td>110</td>
+							      <td>GPS New Generation ETREX 10</td>
+							   </tr>
+							   <tr>
+							      <td>115</td>
+							      <td>Rapala Electric Fillet Knife</td>
+							   </tr>
+							   <tr>
+							      <td>120</td>
+							      <td>Rivers Edge Oasis 1-Man Ladder Stand</td>
+							   </tr>
+							   <tr>
+							      <td>125</td>
+							      <td>Ice Castle</td>
+							   </tr>
+							   <tr>
+							      <td>130</td>
+							      <td>St. Croix Premier Ice Combo</td>
+							   </tr>
+							   <tr>
+							      <td>135</td>
+							      <td>Frabill Straight Line 101 Ice Reel</td>
+							   </tr>
+							   <tr>
+							      <td>140</td>
+							      <td>Marcum Underwater Camera</td>
+							   </tr>
+							   <tr>
+							      <td>145</td>
+							      <td>Tip Down</td>
+							   </tr>
+							   <tr>
+							      <td>150</td>
+							      <td>*$500 Cash</td>
+							   </tr>
+							   <tr>
+							      <td>155</td>
+							      <td>Scheels Outfitters Rectangular Ice Combo Bag</td>
+							   </tr>
+							   <tr>
+							      <td>160</td>
+							      <td>Rivers Edge Big Foot XL Stand</td>
+							   </tr>
+							   <tr>
+							      <td>165</td>
+							      <td>Uncle Josh Original Beaver Dam Tip-Up</td>
+							   </tr>
+							   <tr>
+							      <td>170</td>
+							      <td>Fatfish 949 Ice Shack</td>
+							   </tr>
+							   <tr>
+							      <td>175</td>
+							      <td>Eskimo Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>180</td>
+							      <td>Eskimo QuickFip 1</td>
+							   </tr>
+							   <tr>
+							      <td>185</td>
+							      <td>Moultrie M-990I Game Camera</td>
+							   </tr>
+							   <tr>
+							      <td>190</td>
+							      <td>Pro Classic Ice Fishing Combo</td>
+							   </tr>
+							   <tr>
+							      <td>195</td>
+							      <td>ION Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>200</td>
+							      <td>Fatfish 949 Ice Shack</td>
+							   </tr>
+							   <tr>
+							      <td>205</td>
+							      <td>Eskimo Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>210</td>
+							      <td>Scheels Ice Combo Hard Case</td>
+							   </tr>
+							   <tr>
+							      <td>215</td>
+							      <td>Rivers Edge Big Foot XL Stand</td>
+							   </tr>
+							   <tr>
+							      <td>220</td>
+							      <td>Pflueger Trion Spinning Reel</td>
+							   </tr>
+							   <tr>
+							      <td>225</td>
+							      <td>Eskimo QuickFlip 2</td>
+							   </tr>
+							   <tr>
+							      <td>230</td>
+							      <td>Scheels Outfitters Rectangular Ice Combo Bag</td>
+							   </tr>
+							   <tr>
+							      <td>235</td>
+							      <td>Eskimo Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>240</td>
+							      <td>Rivers Edge Oasis 1-Man Ladder Stand</td>
+							   </tr>
+							   <tr>
+							      <td>245</td>
+							      <td>Frabill Straight Line 101 Ice Reel</td>
+							   </tr>
+							   <tr>
+							      <td>250</td>
+							      <td>Fatfish 949 Ice Shack</td>
+							   </tr>
+							   <tr>
+							      <td>255</td>
+							      <td>Eskimo Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>260</td>
+							      <td>Pro Classic Ice Fishing Combo</td>
+							   </tr>
+							   <tr>
+							      <td>265</td>
+							      <td>Rivers Edge Oasis 1-Man Ladder Stand</td>
+							   </tr>
+							   <tr>
+							      <td>270</td>
+							      <td>Eskimo Ice Auger</td>
+							   </tr>
+							   <tr>
+							      <td>275</td>
+							      <td>Eskimo QuickFip 1</td>
+							   </tr>
+							   <tr>
+							      <td>280</td>
+							      <td>Eskimo Hand Auger</td>
+							   </tr>
+							   <tr>
+							      <td>285</td>
+							      <td>Deep Freeze BlueTipz Tip Up Alarm System</td>
+							   </tr>
+							   <tr>
+							      <td>290</td>
+							      <td>Mr. Heater  Propane buddy</td>
+							   </tr>
+							   <tr>
+							      <td>295</td>
+							      <td>Uncle Josh Original Beaver Dam Tip-Up</td>
+							   </tr>
+							   <tr>
+							      <td>300</td>
+							      <td>*$500 Cash</td>
+							   </tr>
+							 </tbody>
+							</table>
+						</div>
+					</div>
+
 						<br /> <!-- BREAK -->
 						<br /> <!-- BREAK -->
 						<br /> <!-- BREAK -->
