--- a/prizes.html
+++ b/prizes.html
@@ -127,13 +127,13 @@
 					      <!-- Wrapper for carousel items -->
 					      <div class="carousel-inner">
 					          <div class="item active">
-					              <img src="images/prizes/prize1.JPG" alt="First Slide">
+					              <img src="images/prizes/prize1n.JPG" alt="First Slide">
 					          </div>
 					          <div class="item">
-					              <img src="images/prizes/prize2.JPG" alt="Second Slide">
+					              <img src="images/prizes/prize2n.JPG" alt="Second Slide">
 					          </div>
 					          <div class="item">
-					              <img src="images/prizes/prize3.JPG" alt="Third Slide">
+					              <img src="images/prizes/prize3n.JPG" alt="Third Slide">
 					          </div>
 					      </div>
 					      <!-- Carousel controls -->
