Add Scheels Kids Event Link
Fixed typos as well

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="text-center">
       </br>
       <!-- BREAK -->
-      <h1 class="headers">3rd Annual Jig's Up Blugold Ice Fishing Contest</h1>
+      <h1 class="headers"><b>3rd Annual Jig's Up Blugold Ice Fishing Contest</b></h1>
       <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
       <img alt="Sponsors Logo" src="images/3logo.png" </img>
       <div class="horizbar">
@@ -161,8 +161,8 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <h3 class="headers">When:</h3>
-          <h4>Saturday, February 13, 2016; 7am-2pm</h4>
+          <h3 class="headers"><b>When:</b></h3>
+          <h3>Saturday, February 13, 2016; 7am-2pm</h3>
           <br />
           <!-- BREAK -->
           <br />
@@ -170,8 +170,8 @@
           <blockquote>
             No need to check in, will-call tickets purchased on-line will be available for pick up at The View starting at 6:30am.
           </blockquote>
-          <h3 class="headers">Where:</h3>
-          <h4> Lake Wissota</h4>
+          <h3 class="headers"><b>Where:</b></h3>
+          <h3> Lake Wissota</h3>
           <blockquote>
             <b>Weigh-In Stations:</b> The Edge Pub &amp; Eatery and Gordy's Market on "Little Lake Wissota"
             <br />
@@ -179,8 +179,8 @@
             <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, 4pm Fish Prizes
           </blockquote>
 
-          <h3 class="headers">New This Year:</h3>
-          <h4> Scheels Kids Ice Fishing Clinic</h4>
+          <h3 class="headers"><b>New This Year:</b></h3>
+          <h3> <a target="_blank" href="assets\kidsevent.pdf">Scheels Kids Ice Fishing Clinic</a></h3>
 
           <blockquote>
             Scheels will host a Kids Klub ice fishing clinic at their store on Friday, February 12, at 6pm. Space is limited; sign up at Scheels. Learn new skills and try them out on the ice Saturday, February 13 at 12pm in front of The View in the Kids Klub area.
@@ -199,7 +199,7 @@
           <br />
           <!-- BREAK -->
           <div class="btn-center">
-            <a target="_blank" href="assets\rules.pdf" <button class="btn1">Click here to see the rules</button></a>
+            <a target="_blank" href="assets\rules.pdf"> <button class="btn1">Click here to see the rules</button></a>
           </div>
         </div>
         <!-- #col-sm-6  -->
@@ -280,7 +280,7 @@
       <!-- BREAK -->
     </p>
     <div class="buildn">
-      /build 0.9.6.5
+      /build 1.0.1
     </div>
   </div>
   <div class="footer visible-xs">
