--- a/prizes.html
+++ b/prizes.html
@@ -178,7 +178,7 @@
 							   </tr>
 							   <tr>
 							      <td>4</td>
-							      <td>Eskimo QuickFip 1</td>
+							      <td>Eskimo QuickFlip 1</td>
 							   </tr>
 							   <tr>
 							      <td>5</td>
@@ -310,7 +310,7 @@
 							   </tr>
 							   <tr>
 							      <td>85</td>
-							      <td>Eskimo QuickFip 1</td>
+							      <td>Eskimo QuickFlip 1</td>
 							   </tr>
 							   <tr>
 							      <td>90</td>
