Added Scheels Kids Event to Dropdown

--- a/contact.html
+++ b/contact.html
@@ -65,13 +65,15 @@
 					<li class="dropdown">
 						<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="directions.html">Directions</a></li>
+							<<li><a href="directions.html">Directions</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="schedule.html">Schedule</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="prizes.html">Prizes</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="lodging.html">Lodging</a></li>
+							<li role="presentation" class="divider"></li>
+							<li><a href="assets/kidsevent.pdf" target="_blank">Scheels Kids Event</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="sponsors.html">Sponsors</a></li>
 							<li role="presentation" class="divider"></li>
