--- a/directions.html
+++ b/directions.html
@@ -75,6 +75,8 @@
 							<li role="presentation" class="divider"></li>
 							<li><a href="lodging.html">Lodging</a></li>
 							<li role="presentation" class="divider"></li>
+							<li><a href="assets/kidsevent.pdf" target="_blank">Scheels Kids Event</a></li>
+							<li role="presentation" class="divider"></li>
 							<li><a href="sponsors.html">Sponsors</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="pastResults.html">Past Results</a></li>
