i updated the video

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <br />
           <!-- BREAK -->
           <div class="videowrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/j3KceXrbGn4" frameborder="0"></iframe>
+          	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xfDY-XQVjqE" frameborder="0" allowfullscreen></iframe>
           </div>
           <div class="sponsors">
             <a href="http://www.gordyscountymarket.net" target="_blank">
