Updated Wording and Build Number

--- a/tickets.html
+++ b/tickets.html
@@ -131,7 +131,7 @@
 		</blockquote>
 
 		<h4 class="headers">Fish Ticket Availability:</h4>
-		<h4>Tickets available online until 11:59pm on Friday, February 12th. Fish tickets will be available after February 13th on the ice until 9am for $40. </h4>
+		<h4>Tickets available online until 11:59pm on Friday, February 12th. Fish tickets will be available on February 13th at the Weigh-in Stations and The View until 9am for $40. </h4>
 		<blockquote>
 			Fish tickets purchased online will be mailed through February 4th to the address indicated. After February 4th, tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake
       Wissota starting at 6:30AM Saturday, February 13th. NOTE: You do not need to pick up your fish tickets until you are ready to weigh-in a fish.
