Scheels kids event update
updated the homepage for the gear is not provided  for kids….Scheels

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
           <blockquote>
             Scheels will host a Kids Klub ice fishing clinic at their store on Friday, February 12, at 6pm. Space is limited; sign up at Scheels. Learn new skills and try them out on the ice Saturday, February 13 at 12pm in front of The View in the Kids Klub area.
-            Holes will be drilled; gear and lunch will be provided for the kids. This event is FREE for kids up to age 12, prizes will be awarded for fish caught. Any fish caught in the Kid’s Club area will be marked and will not be eligible to register
+            Holes will be drilled; <b>gear is NOT provided</b>, lunch will be provided for the kids. This event is FREE for kids up to age 12, prizes will be awarded for fish caught. Any fish caught in the Kid’s Club area will be marked and will not be eligible to register
             in the Jig’s Up Blugold Ice Fishing Contest.
           </blockquote>
           <p>
