wording update on raffle tickets
re wording

--- a/tickets.html
+++ b/tickets.html
@@ -139,7 +139,7 @@
 		</blockquote>
 
     <h4 class="headers">Raffle Tickets:</h4>
-		<h4>$5 each or $20 for 5 </h4>
+		<h4>$5 each or 5 for $20</h4>
 		<blockquote>
 			$7,500 in prizes including a 2015 Polaris Sportsman 4-wheeler
 
