--- a/schedule.html
+++ b/schedule.html
@@ -127,59 +127,64 @@
       </div>
       <!-- #container -->
       <div class="table-responsive">
-        <table class="table">
+        <table class="table ">
           <thead>
             <tr>
+							<th> Location</th>
               <th>Time</th>
               <th>Event</th>
-              <th> </th>
             </tr>
           </thead>
           <tbody>
             <tr>
+							<td></td>
               <td><b>Friday, February 12th</b></td>
               <td></td>
             </tr>
             <tr>
+							<td>Scheels</td>
               <td>6:00PM</td>
               <td>Kids Klub ice fishing clinic at Scheels, sign up in advance at Scheels (Free)</td>
             </tr>
             <tr>
+							<td></td>
               <td><b>Saturday, February 13th</b></td>
               <td></td>
             </tr>
             <tr>
+							<td>Lake Wissota</td>
               <td>7:00AM</td>
               <td>Contest Begins! No need to pre-register, just head out to the ice and come in when you have a fish to register</td>
             </tr>
             <tr>
+							<td>The View</td>
               <td>9:00AM</td>
               <td>Last Chance to purchase additional Fish Tickets for $40</td>
-              <td> </td>
             </tr>
             <tr>
+							<td>Lake Wissota</td>
               <td>12:00PM</td>
               <td>Kids Klub event on the ice in front of the View (Free lunch for kids)</td>
             </tr>
             <tr>
+							<td>Gordie's Market & Edge Pub and Eatery</td>
               <td>2:00PM</td>
               <td>Weigh-in Stations close</td>
-              <td></td>
             </tr>
             <tr>
+							<td>The View</td>
               <td>3:00PM</td>
               <td>Last Chance to purchase raffle tickets, winners announced and prizes distributed</td>
-              <td></td>
             </tr>
             <tr>
+							<td>The View</td>
               <td>4:00PM</td>
               <td>Fish contest winners announced and prizes distributed</td>
-              <td></td>
             </tr>
             <tr>
-              <td>Stick around for music and fish stories at the bar</td>
-              <td></td>
-              <td></td>
+							<td>The View</td>
+              <td>5:00PM to ...</td>
+							<td>Stick around for music and fish stories at the bar</td>
             </tr>
           </tbody>
         </table>
