added content regarding raffle tickets
raffle tickets need more content wanted to add image but, did not want
to allow fake raffle tickets.

--- a/tickets.html
+++ b/tickets.html
@@ -141,7 +141,7 @@
     <h4 class="headers">Raffle Tickets:</h4>
 		<h4>$5 each or 5 for $20</h4>
 		<blockquote>
-			$7,500 in prizes including a 2015 Polaris Sportsman 4-wheeler
+			$7,500 in prizes includes a 2015 Polaris Sportsman 4-wheeler, $500 Scheels Gift Card, Vexilar FL-20 Genz Pack Locater System, Benelli Nova Pump Sheild Shotgun, Men's Adams Golf Speedline Club Set
 
       <br />
       <br />
