Fixed broken link in Firefox and Fixed Schedule formatting

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <br />
           <!-- BREAK -->
           <div class="btn-center">
-            <a target="_blank" href="assets\rules.pdf"> <button class="btn1">Click here to see the rules</button></a>
+            <a target="_blank" href="assets/rules.pdf"> <button class="btn1">Click here to see the rules</button></a>
           </div>
         </div>
         <!-- #col-sm-6  -->
