--- a/schedule.html
+++ b/schedule.html
@@ -137,8 +137,8 @@
           </thead>
           <tbody>
             <tr>
-							<td></td>
-              <td><b>Friday, February 12th</b></td>
+							<td><b>Friday, February 12th</b></td>
+              <td></td>
               <td></td>
             </tr>
             <tr>
@@ -147,8 +147,8 @@
               <td>Kids Klub ice fishing clinic at Scheels, sign up in advance at Scheels (Free)</td>
             </tr>
             <tr>
-							<td></td>
-              <td><b>Saturday, February 13th</b></td>
+							<td><b>Saturday, February 13th</b></td>
+              <td></td>
               <td></td>
             </tr>
             <tr>
@@ -167,7 +167,7 @@
               <td>Kids Klub event on the ice in front of the View (Free lunch for kids)</td>
             </tr>
             <tr>
-							<td>Gordie's Market & Edge Pub and Eatery</td>
+							<td>Gordy's Market at Lake Wissota &amp; The Edge Pub and Eatery</td>
               <td>2:00PM</td>
               <td>Weigh-in Stations close</td>
             </tr>
@@ -183,7 +183,7 @@
             </tr>
             <tr>
 							<td>The View</td>
-              <td>5:00PM to ...</td>
+              <td>5:00PM</td>
 							<td>Stick around for music and fish stories at the bar</td>
             </tr>
           </tbody>
