Fixed a Sponsor Link and added Live Results Page*
*No link on NavBar yet, having issues with embedding a Google Sheet.

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <a href="http://www.stumpshotolives.com" target="_blank">
               <img class="indexSponsor" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages">
             </a>
-            <a href="http://www.prestigeautocorp.com" target="_blank">
+            <a href="http://www.prestigervauto.com/" target="_blank">
               <img class="indexSponsor" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation">
             </a>
             <a href="http://www.uwec.edu/dining/" target="_blank">
