--- a/lodging.html
+++ b/lodging.html
@@ -149,7 +149,7 @@
               <td>$74.95</td>
             </tr>
             <tr>
-              <td><a target="_blank" alt="Baymont!Inn & Suites" href="http://www.baymontinns.com/hotels/wisconsin/eau-claire/baymont-inn-and-suites-eau-claire-wi/hotel-overview?WID=LC:BU:20150901:Rio:Local">Baymont Inn & Suites</a></td>
+              <td><a target="_blank" alt="Baymont!Inn &amp; Suites" href="http://www.baymontinns.com/hotels/wisconsin/eau-claire/baymont-inn-and-suites-eau-claire-wi/hotel-overview?WID=LC:BU:20150901:Rio:Local">Baymont Inn &amp; Suites</a></td>
               <td>4075 Commonwealth
                 <br /> Eau Claire, WI 54701</td>
               <td>(715) 839-7100</td>
@@ -164,14 +164,14 @@
 
             </tr>
             <tr>
-              <td><a target="_blank" alt="Country Inn & Suites By Carlson" href="http://hotels.countryinns.com/wi/eauclaire/hotels_eau-claire_wi_wiclaire.html">Country Inn & Suites By Carlson</a></td>
+              <td><a target="_blank" alt="Country Inn &amp; Suites By Carlson" href="http://hotels.countryinns.com/wi/eauclaire/hotels_eau-claire_wi_wiclaire.html">Country Inn &amp; Suites By Carlson</a></td>
               <td>3614 Gateway DR
                 <br /> Eau Claire, WI 54701</td>
               <td>(715) 832-7289</td>
               <td>$99.00</td>
             </tr>
             <tr>
-              <td><a target="_blank" alt="Hampton Inn & Suites-Lake Hallie" href="http://hamptoninn3.hilton.com/en/hotels/wisconsin/hampton-inn-and-suites-chippewa-falls-EAUCFHX/index.html">Hampton Inn & Suites-Lake Hallie</a></td>
+              <td><a target="_blank" alt="Hampton Inn &amp; Suites-Lake Hallie" href="http://hamptoninn3.hilton.com/en/hotels/wisconsin/hampton-inn-and-suites-chippewa-falls-EAUCFHX/index.html">Hampton Inn &amp; Suites-Lake Hallie</a></td>
               <td>12707 30th Ave
                 <br />
     Chippewa Falls, WI 54729</td>
@@ -179,7 +179,7 @@
                 <td>$119.00</td>
             </tr>
             <tr>
-              <td><a target="_blank" alt="Holiday Inn Eau Claire South & Jonny's Italian Steakhouse" href="http://www.ihg.com/holidayinn/hotels/us/en/eau-claire/eauhi/hoteldetail">Holiday Inn Eau Claire South & Jonny's Italian Steakhouse</a></td>
+              <td><a target="_blank" alt="Holiday Inn Eau Claire South &amp; Jonny's Italian Steakhouse" href="http://www.ihg.com/holidayinn/hotels/us/en/eau-claire/eauhi/hoteldetail">Holiday Inn Eau Claire South &amp; Jonny's Italian Steakhouse</a></td>
               <td>4751 Owen Ayres Court
                 <br />
     Eau Claire, WI 54701</td>
@@ -188,7 +188,7 @@
             </tr>
 
             <tr>
-              <td><a target="_blank" alt="Plaza Hotel & Suites" href="http://www.plazaeauclaire.com/">Plaza Hotel & Suites</a></td>
+              <td><a target="_blank" alt="Plaza Hotel &amp; Suites" href="http://www.plazaeauclaire.com/">Plaza Hotel &amp; Suites</a></td>
               <td>1202 W Clairemont
                 <br />
     Eau Claire, WI 54701</td>
@@ -242,7 +242,7 @@
     <a href="http://www.stumpshotolives.com" target="_blank">
       <img class="sponsorBarImg" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages">
     </a>
-    <a href="http://www.prestigeautocorp.com" target="_blank">
+    <a href="http://www.prestigervauto.com/" target="_blank">
       <img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation">
     </a>
     <a href="http://www.uwec.edu/dining/" target="_blank">
