--- a/directions.html
+++ b/directions.html
@@ -191,7 +191,7 @@
       <a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
       <a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
       <a href="http://www.stumpshotolives.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages"></a>
-      <a href="http://www.prestigeautocorp.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
+      <a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
       <a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
       <a href="http://www.pepsi.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\pepsi.png" alt="Pepsi"></a>
       <a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
