--- a/liveResults.html
+++ b/liveResults.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,7 @@
 	<meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
 	<meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Jig's Up | Sponsors</title>
+	<title>Jig's Up | Live Results</title>
 	<!-- Bootstrap -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
@@ -112,87 +113,66 @@
 </head>
 
 <body>
-	<br /> <!-- BREAK -->
-	<br /> <!-- BREAK -->
-	<section id="prizeGrid"> <!-- Images must be 300x255 -->
-		<div class="container">
-			<div class="row">
-				<div class="text-center">
-					<h2 class="headers"><b>Title Sponsors</b></h2>
-				</div>
-				<div class="col-lg-6 col-xs-12 thumb center">
-					<a href="http://www.gordyscountymarket.net" target="_blank"><img class="img-responsive center" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-6 col-xs-12 thumb center">
-					<a href="http://www.scheels.com" target="_blank"><img class="img-responsive center" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<br /> <!-- BREAK -->
-				<div class="text-center">
-					<h2 class="headers"><b>Sponsors</b></h2>
-				</div>
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.leinie.com" target="_blank"><img class="img-responsive" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.stumpshotolives.com" target="_blank"><img class="img-responsive" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages"></a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.prestigervauto.com/" target="_blank"><img class="img-responsive" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.pepsi.com/" target="_blank"><img class="img-responsive" src="images\sponsors\pepsi.png" alt="Pepsi"></a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.eauclaireford.com/" target="_blank"><img class="img-responsive" src="images\sponsors\ford.png" alt="Ford"></a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive" src="images\sponsors\edge.png" alt="Ford"></a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="img-responsive" src="images\sponsors\view.png" alt="Ford"></a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-        <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive" src="images\sponsors\gollon.png" alt="Gollon brothers"></a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+  <section id="content">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-6">
+          <br /> <!-- BREAK -->
+          <br /> <!-- BREAK -->
+          <br /> <!-- BREAK -->
+          <br /> <!-- BREAK -->
+          <h2 class="headers">Live Results</h2>
+        </div>
+        <!-- #col-sm-6 -->
+      </div>
+      <!-- #container -->
+      <iframe src="https://docs.google.com/spreadsheets/d/1MbW6ucR1Gnp-WydO5RpIADjK40gRs4TdW0a1Vqc-o9Y/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+      <!-- #table-responsive -->
+      <br /> <!-- BREAK -->
+      <br /> <!-- BREAK -->
+      <br /> <!-- BREAK -->
+      <br /> <!-- BREAK -->
+  </section>
 
-			</div> <!-- #row  -->
-		</div> <!-- #container -->
-		<br /> <!-- BREAK -->
-		<br /> <!-- BREAK -->
-		<br /> <!-- BREAK -->
-		<br /> <!-- BREAK -->
-	</section>
+  <div class="sponsorBar">
+    <a href="http://www.gordyscountymarket.net" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
+    <a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
+    <a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+    <a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
+    <a href="http://www.stumpshotolives.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages"></a>
+    <a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
+    <a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
+    <a href="http://www.pepsi.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\pepsi.png" alt="Pepsi"></a>
+    <a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
+    <a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
+    <a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
+    <a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
+  </div>
+  <br /> <!-- BREAK -->
+  <br /> <!-- BREAK -->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="/js/boostrap-media-lightbox.min.js"></script>
-	<script src="/js/boostrap-media-lightbox.js"></script>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
   <script src="js/main.js" type="text/javascript"></script>
 </body>
 
 <footer>
-   <div class="footer hidden-xs">
-     <br /> <!-- BREAK -->
-     <p>
-       Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-       <br /> <!-- BREAK -->
-     </p>
-   </div>
-   <div class="footer visible-xs">
-     <br /> <!-- BREAK -->
-     <p class="small-footer">
-       Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-       <br /> <!-- BREAK -->
-     </p>
-   </div>
+  <div class="footer hidden-xs">
+    <br /> <!-- BREAK -->
+    <p>
+      Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+      <br /> <!-- BREAK -->
+    </p>
+  </div>
+  <div class="footer visible-xs">
+    <br /> <!-- BREAK -->
+    <p class="small-footer">
+      Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+      <br /> <!-- BREAK -->
+    </p>
+  </div>
 </footer>
 </html>
