Fixed iFrame Issues

--- a/liveResults.html
+++ b/liveResults.html
@@ -122,12 +122,15 @@
           <br /> <!-- BREAK -->
           <br /> <!-- BREAK -->
           <h2 class="headers">Live Results</h2>
+					<p>This will be updated periodically, so keep checking. It will be sorted by time when the fish was weighed.
         </div>
         <!-- #col-sm-6 -->
       </div>
       <!-- #container -->
-      <iframe src="https://docs.google.com/spreadsheets/d/1MbW6ucR1Gnp-WydO5RpIADjK40gRs4TdW0a1Vqc-o9Y/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-      <!-- #table-responsive -->
+			<div class="fluidmedia">
+      	<iframe src="https://docs.google.com/spreadsheets/d/1MbW6ucR1Gnp-WydO5RpIADjK40gRs4TdW0a1Vqc-o9Y/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+			</div>
+			<!-- #table-responsive -->
       <br /> <!-- BREAK -->
       <br /> <!-- BREAK -->
       <br /> <!-- BREAK -->
