--- a/index.html
+++ b/index.html
@@ -178,15 +178,15 @@
             <b>Weigh-In Stations:</b> The Edge Pub &amp; Eatery and Gordy's Market on "Little Lake Wissota"
             <br />
             <!-- BREAK -->
-            <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, 4pm Fish Prizes
+            <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, Fish Prizes to be drawn right after
           </blockquote>
 
           <h3 class="headers"><b>New This Year:</b></h3>
           <h3> <a target="_blank" href="assets\kidsevent.pdf">Scheels Kids Ice Fishing Clinic</a></h3>
 
           <blockquote>
-            Scheels will host a Kids Klub ice fishing clinic at their store on Friday, February 12, at 6pm. Space is limited; sign up at Scheels. Learn new skills and try them out on the ice Saturday, February 13 at 12pm in front of The View in the Kids Klub area.
-            Holes will be drilled; <b>gear is NOT provided</b>, lunch will be provided for the kids. This event is FREE for kids up to age 12, prizes will be awarded for fish caught. Any fish caught in the Kid’s Club area will be marked and will not be eligible to register
+            Scheels will host a Kids Klub ice fishing clinic at their store on Friday, February 12, at 6pm. Space is limited; sign up in advance at Scheels. Learn new skills and try them out on the ice Saturday, February 13 from 12pm-2pm in front of The View in the Kids Klub area.
+            Holes will be drilled and lunch will be provided for the kids;<b>gear is NOT provided</b>. This event is FREE for kids up to age 12, prizes will be awarded for fish caught. Any fish caught in the Kid’s Club area will be marked and will not be eligible to register
             in the Jig’s Up Blugold Ice Fishing Contest.
           </blockquote>
           <p>
