notes trying to add raffle ticket images to prizes

--- a/prizes.html
+++ b/prizes.html
@@ -490,6 +490,20 @@
 							</table>
 						</div>
 					</div>
+	<!--			<h2 class="headers">Raffle Prizes</h2>
+				<body>
+  <div class="row">
+		<div class="col-sm-6">
+    <img src="images/prizes/RaffleTicket.jpg"/>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-6">
+    <img src="images/prizes/RaffleTicket-2.jpg"/>
+	</div>
+</div>
+-->
+
 
 						<br /> <!-- BREAK -->
 						<br /> <!-- BREAK -->
