raffle prizes thrown in of images
Casey let me know what you think

--- a/prizes.html
+++ b/prizes.html
@@ -490,20 +490,18 @@
 							</table>
 						</div>
 					</div>
-	<!--			<h2 class="headers">Raffle Prizes</h2>
-				<body>
-  <div class="row">
-		<div class="col-sm-6">
-    <img src="images/prizes/RaffleTicket.jpg"/>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-sm-6">
-    <img src="images/prizes/RaffleTicket-2.jpg"/>
-	</div>
-</div>
--->
 
+<div class="container">
+	<h2 class="headers">Top Raffle Prizes</h2>
+ <div class="col-md-6">
+		 <img class="img-responsive" src="images/prizes/RaffleTicket.jpg" style="width:600px;height:300px">
+ </div>
+ <div class="col-md-6">
+		 <img class="img-responsive" src="images/prizes/RaffleTicket-2.jpg"  style="width:600px;height:300px">
+ </div>
+</div>
+
+</div>
 
 						<br /> <!-- BREAK -->
 						<br /> <!-- BREAK -->
