added content about fishing

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <i>
               The Wissota Lions Club will have food and beverages available on the ice. All state regulations and bag limits
 						  apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest
-              includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.
+              includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.<a href="http://dnr.wi.gov/topic/fishing/regulations/"> Click to reference the Wisconsin DNR website. </a>
             </i>
           </p>
           <br />
